--- a/squelettes/css/habillage.css
+++ b/squelettes/css/habillage.css
@@ -805,13 +805,24 @@ ul.box_menu li.citation .text p{
 
  ul.submenu {
  	border-radius:0.4em;
+
  	text-align:center;
 	background-color:#64b362;
 	font-size:2.5em;
 	behavior: url(/PIE.htc);
 	}   
 
-
+ ul.submenu li.on{background:#99cc66}
+ul.submenu li.first{
+	 	border-top-right-radius:0.4em;
+	 	border-top-left-radius:0.4em;	 	
+	 	behavior: url(/PIE.htc);
+}
+ul.submenu li.last{
+	 	border-bottom-right-radius:0.4em;
+	 	border-bottom-left-radius:0.4em;	 	
+	 	behavior: url(/PIE.htc);
+}
 .liste-items{
 	border-top: 0px none;
 }
@@ -1059,14 +1070,13 @@ div.close{
 
 /*Le Panier*/
 
-#mon_panier{
-	position:relative;	
-	right:1em;
-	top: 1em;	
-	z-index:700;
-	width : -20%;
-	float:right;
-	margin-left:1em;
+#mon_panier {
+    float: right;
+    margin-left: 1.9em;
+    position: relative;
+    right: 1em;
+    top: 1em;
+    z-index: 700;
 }
 
 #mon_panier h2,#mon_panier .h2{
