--- a/squelettes/css/habillage.css
+++ b/squelettes/css/habillage.css
@@ -1015,16 +1015,26 @@ section.hyperlien {
 	
 	border-radius:0.8em;
 	text-align:left;
-	font-size:1.2em;
+	margin-bottom:0.5em;
+	background:#EEC831;
+	behavior: url(/PIE.htc);
+	padding:0 0.8em;
+	
+	}
+section.hyperlien a{color:#F9EE72}	
+
+section.hyperlien.news a{color:#EEC831}	
+
+section.hyperlien.news {
 	padding:0.8em;
+	font-size:1.2em;
 	font-weight:bold;
 	margin-bottom:0.5em;
 	background:#ffffff;
-	behavior: url(/PIE.htc);
 	
 	}
 	
-aside.more .h2, section.hyperlien .h2{
+aside.more .h2, section.hyperlien.news .h2{
 	background:#eec831; 
 	padding:0.2em 2em;
 	border-radius:0.4em;
